--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="profile.png" alt="Ankit Singh profile picture" />
+        <img src="profile.png" border-radius="50%" alt="Ankit Singh profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
