--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='http://www.linkedin.com/in/ankit-singh-7a5788225'"
