--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             onclick="location.href='http://www.linkedin.com/in/ankit-singh-7a5788225'"
           />
           <img
-            src="./assets/github.png"
+            src="github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/'"
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="about-pic.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -86,7 +86,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -95,7 +95,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -114,7 +114,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -130,7 +130,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -141,7 +141,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -152,7 +152,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -163,7 +163,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -181,7 +181,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -192,7 +192,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -203,7 +203,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -218,7 +218,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -232,7 +232,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="project-1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -253,7 +253,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -277,7 +277,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="project-3.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -313,7 +313,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
