--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -325,7 +325,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
