--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic-container">
+      <div border-radius="50%" class="section__pic-container">
         <img src="profile.png" border-radius="50%" alt="Ankit Singh profile picture" />
       </div>
       <div class="section__text">
